# dashboard-sensor

./: .dockerignore  .gitignore  CONTAINERIZATION_SUMMARY.md  DOCKER.md  Dockerfile  Dockerfile.dev  ECS_DEPLOYMENT_GUIDE.md  Makefile  README.md  app.py  appspec.yml  docker-compose.override.yml  docker-compose.yml  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  run-tests.sh  task-definition.json  test_app.py  test_utils.py
.github/workflows/: deploy.yml  test.yml
scripts/: after_install.sh
scripts/deployment_scripts/: application_start.sh  application_stop.sh  before_install.sh  validate_service.sh
templates/: index.html
